[package]
name = "rustchatui"
version = "0.2.13"
edition = "2021"
description = "A small Rust library and binary for serving a pre-built ChatGPT-like WebUI in any Rust project."
license = "MIT"
readme = "ReadMe.md"
keywords = ["ChatGPT", "WebUI", "LLM", "rust"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "chatui"
path = "src/main.rs"

[dependencies]
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
anyhow = "1"
include_dir = "0.7.4"
tower = "0.5.2"
mime_guess = "2.0.5"
serde = { version = "1.0.190", features = ["serde_derive"] }
clap = { version = "4.4.7", features = ["derive"] }
local-ip-address = "0.6.5"
inquire = "0.9.1"
colored = "3.0.0"
